test/banana/typeck/should_fail/component_unkown_param_in_stmt.banana
a = IPTablesSource(sleep=0.01)
a.test = "foobar"

# NEW_TEST

a = CloudMarkovChainSource()
a.transitions.web_servic = {}

# RAISE BananaPropertyDoesNotExists